--- a/index.html
+++ b/index.html
@@ -4,9 +4,9 @@
 <meta charset="UTF-8">
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 <meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>Document</title>
+<title>钱有鹏的主页</title>
 </head>
 <body>
-个人主页
+Youpeng Qian个人主页
 </body>
 </html>
