--- a/index.html
+++ b/index.html
@@ -1,12 +1,97 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="zh-CN">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<meta http-equiv="X-UA-Compatible" content="ie=edge">
-<title>钱有鹏的主页</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>钱有鹏的简历</title>
+    <style>
+        body {
+            font-family: Arial, sans-serif;
+            margin: 0;
+            padding: 0;
+            line-height: 1.6;
+            background-color: #f4f4f4;
+            color: #333;
+        }
+        .container {
+            max-width: 800px;
+            margin: 20px auto;
+            background: #fff;
+            padding: 20px;
+            box-shadow: 0 2px 4px rgba(0, 0, 0, 0.1);
+            border-radius: 5px;
+        }
+        h1, h2, h3 {
+            color: #444;
+        }
+        .section {
+            margin-bottom: 20px;
+        }
+        ul {
+            padding-left: 20px;
+        }
+        a {
+            color: #007bff;
+            text-decoration: none;
+        }
+        a:hover {
+            text-decoration: underline;
+        }
+    </style>
 </head>
 <body>
-Youpeng Qian个人主页
+    <div class="container">
+        <h1>钱有鹏 - .NET 后端开发</h1>
+        <p><strong>年龄:</strong> 20</p>
+        <p><strong>户籍:</strong> 甘肃</p>
+        <p><strong>GitHub:</strong> <a href="https://github.com/HermanHawk" target="_blank">github.com/HermanHawk</a></p>
+
+        <div class="section">
+            <h2>求职意向</h2>
+            <p>意向岗位: .NET 开发</p>
+        </div>
+
+        <div class="section">
+            <h2>主要技术</h2>
+            <p>WinForm, WPF, ASP.NET 三层架构, MVC, MVVM, WCF, Socket, WebSocket, MQTT, ORM, SQL Server, MySQL, Git, SVN, TFS</p>
+        </div>
+
+        <div class="section">
+            <h2>教育经历</h2>
+            <p><strong>2015.9 - 2018.6</strong><br>深圳职业技术大学 | 专科 | 软件技术</p>
+            <p>主修课程: C 语言程序设计, 面向对象程序设计 (C#), 数据结构, 数据库管理与应用 (SQL Server 2008), C/S 应用系统开发, 动态 Web 技术 (ASP.NET), iOS 开发 (Objective-C, Swift), 软件测试</p>
+            <p>辅修课程: 计算机技术基础, 微机组装与维护, 计算机网络管理与维护, 网络安全技术</p>
+        </div>
+
+        <div class="section">
+            <h2>工作经历</h2>
+            <p><strong>2022.8 - 2024.2</strong><br>深圳市宙视达科技有限公司 | .NET 后端开发</p>
+            <ul>
+                <li>负责公司原有 C/S 系统产品的维护，涉及人脸识别、安全帽报警、工作服报警、车牌识别等模块的业务维护，使用 C#、WCF、WebSocket。</li>
+                <li>参与基于 GB28181、P2P 等视频矩阵接入的功能定制开发，负责湖南省地质院值班平台、深圳市跌幅山隧道车牌管理等项目。</li>
+                <li>基于公司产品，开发 B/S 端功能，涉及 ASP.NET MVC。</li>
+                <li>负责公司物联网上位机系统的研发，涉及 MQTT、Task、ADO.NET 等技术。</li>
+                <li>使用 WPF、MVVM 开发桌面客户端。</li>
+                <li>现场技术支持，包括摄像头与设备安装、调试等。</li>
+            </ul>
+
+            <p><strong>2018.7 - 2018.8</strong><br>深圳市锐诺网络技术开发有限公司 | .NET 后端开发</p>
+            <ul>
+                <li>负责项目功能开发，涉及 ASP.NET 开发。</li>
+            </ul>
+        </div>
+
+        <div class="section">
+            <h2>相关技能</h2>
+            <p>熟悉 C, C#, HTML, CSS, JavaScript, jQuery, AJAX, Objective-C, WCF, WebSocket, MQTT</p>
+            <p>熟悉 SQL Server 和 MySQL 数据库</p>
+            <p>掌握软件测试技术和计算机系统组装</p>
+        </div>
+
+        <div class="section">
+            <h2>自我评价</h2>
+            <p>工作责任心强，吃苦耐劳，能承受较强的工作压力；有上进心，积极学习提高自身实力；具备良好的沟通能力和团队合作意识，思维活跃，具备较强的主观能动性。</p>
+        </div>
+    </div>
 </body>
 </html>
