--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 
         <div class="section">
             <h2>主要技术</h2>
-            <p>WinForm, WPF, ASP.NET 三层架构, MVC, MVVM, WCF, Socket, WebSocket, MQTT, ORM, SQL Server, MySQL, Git, SVN, TFS</p>
+            <p>WinForm, WPF, ASP.NET, 三层架构, MVC, MVVM, WCF, Socket, WebSocket, MQTT, ORM, SQL Server, MySQL, Git, SVN, TFS</p>
         </div>
 
         <div class="section">
@@ -65,6 +65,15 @@
 
         <div class="section">
             <h2>工作经历</h2>
+            <p><strong>2024.4 - 至今</strong><br>常州友道自动化科技有限公司 | 软件工程师</p>
+            <ul>
+                <li>负责后端开发与调试，涉及 WPF、WebAPI、OPC DA、OPC UA、S7 协议、WebSocket、HTTP。</li>
+                <li>与雷达、下位 PLC 设备对接，控制和调度堆取料机。</li>
+                <li>涉及线性代数、三角函数和 PID 控制。</li>
+                <li>掌握基础 PLC 程序，具备电路图阅读能力，能使用万用表测试电压等排除故障。</li>
+                <li>熟悉交换机和网络配置。</li>
+            </ul>
+
             <p><strong>2022.8 - 2024.2</strong><br>深圳市宙视达科技有限公司 | .NET 后端开发</p>
             <ul>
                 <li>负责公司原有 C/S 系统产品的维护，涉及人脸识别、安全帽报警、工作服报警、车牌识别等模块的业务维护，使用 C#、WCF、WebSocket。</li>
