--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
 
         <div class="section">
             <h2>工作经历</h2>
-            <p><strong>2024.4 - 至今</strong><br>常州友道自动化科技有限公司 | 软件工程师</p>
+            <p><strong>2024.4 - 至今</strong><br>常州友道自动化科技有限公司上海分公司 | 软件工程师</p>
             <ul>
                 <li>负责后端开发与调试，涉及 WPF、WebAPI、OPC DA、OPC UA、S7 协议、WebSocket、HTTP。</li>
                 <li>与雷达、下位 PLC 设备对接，控制和调度堆取料机。</li>
